# brickrail-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  hub_state.json  layout.json  loop-test.json  monorail-test.json  program_cache_test.json  puppets_config_test.json  pyproject.toml  ro-layout-hubless.json  ro-layout-markers.json  ro-layout-orange-double.json  ro-layout-switches2.json  ro-layout-train.json  ro-layout-trains.json  ro-layout.json  settings.json  switch_and_train.json  test-new-serialization.json  test_scheddule.json  test_wrong_intentions.json
.github/workflows/: ci.yml  release.yml  rust.yml
brickrail/: Cargo.toml
brickrail/assets/shaders/: track_base.wgsl  track_path.wgsl
brickrail/src/: bevy_tokio_tasks.rs  ble.rs  ble_switch.rs  ble_train.rs  block.rs  crossing.rs  destination.rs  editor.rs  inspector.rs  layout.rs  layout_devices.rs  layout_primitives.rs  main.rs  marker.rs  materials.rs  new_route.rs  persistent_hub_state.rs  post_processing.rs  route.rs  route_modular.rs  schedule.rs  section.rs  selectable.rs  settings.rs  switch.rs  switch_motor.rs  track.rs  track_mesh.rs  train.rs  train_components.rs  train_modular.rs  utils.rs
brickrail/tests/: test_ble_train.rs
pybricks/: compile_programs.py  pyproject.toml
pybricks-ble/: Cargo.toml
pybricks-ble/src/: io_hub.rs  lib.rs  pybricks_hub.rs
pybricks-ble/tests/: test_io_hub.rs
pybricks/programs/: io_hub_unfrozen.py  layout_controller.py  led_red.py  smart_train.py  test_io.py  test_io1.py
pybricks/programs/mpy/: io_hub_unfrozen.mpy  layout_controller.mpy  led_red.mpy  smart_train.mpy  test_io.mpy  test_io1.mpy
src/: block.rs  editor.rs  inspector.rs  layout.rs  layout_primitives.rs  main.rs  marker.rs  route.rs  section.rs  track.rs  train.rs  utils.rs
test-layouts/: ble_test.json  ble_test_2switches.json  ble_test_without_layout_hub.json  ext3.json  layout_inverted_motor.json  layout_puppet.json  layout_puppet2.json  many_switches.json  ro-layout-hubless.json  ro-layout-switches.json  ro-layout-tracks.json  ro-layout-train2.json  ro-layout-trains.json  ro-layout.json  ro-test.json  ro-upper.json  ro25-1.json  ro25-2.json  schedule-4dest.json  seek_test.json  simple.json  switch_and_train.json  switches_test_ro.json  test_disallow_reversing.json  test_shared_motor_locks.json
test-pybricks/: Cargo.toml
test-pybricks/src/: main.rs
