[package]
name = "brickrail-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.1", features = ["dynamic_linking", "serialize"] }
bevy_framepace = "0.13.3"
itertools = "0.11.0"
petgraph = "0.6.3"
serde_json = "1.0.105"
strum = "0.25.0"
strum_macros = "0.25.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
