[package]
name = "brickrail-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "serialize"] }
bevy-inspector-egui = "0.21.0"
bevy-trait-query = "0.4.0"
bevy_egui = "0.23.0"
bevy_framepace = "0.14.1"
bevy_mouse_tracking_plugin = "0.7.0"
bevy_pancam = "0.10.0"
bevy_prototype_lyon = "0.10.0"
itertools = "0.11.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = "1.0.193"
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
