[package]
name = "brickrail-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bevy = { version = "0.15", features = ["serialize"] }
bevy-inspector-egui = "0.28"
bevy_framepace = { git = "https://github.com/eero-lehtinen/bevy_framepace", branch = "bevy-15" }
bevy_mouse_tracking_plugin = { git = "https://github.com/Novakasa/bevy-mouse-tracking.git", branch = "main" }
bevy_pancam = "0.16"
bevy_prototype_lyon = "0.13"
itertools = "0.11"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = "1.0"
serde_json = "1.0"
serde_json_any_key = "2.0"
serde_with = "3.4"
strum = "0.25"
strum_macros = "0.25"
pybricks-ble = { path = "../pybricks-ble" }
test-log = "0.2"
bitflags = "2.4"
rfd = "0.14"
sha2 = "0.10"
rand = "0.8"
lyon_tessellation = "1.0.15"

[dev-dependencies]
bevy = { version = "0.15", features = ["dynamic_linking", "serialize"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
