[package]
name = "brickrail-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bevy = { version = "0.16", features = ["serialize"] }
bevy-inspector-egui = "0.33"
bevy_framepace = "0.19"
bevy_pancam = "0.18"
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
itertools = "0.14"
petgraph = { version = "0.8" }
serde = "1"
serde_json = "1"
serde_json_any_key = "2"
serde_with = "3"
strum = "0.27"
strum_macros = "0.27"
pybricks-ble = { path = "../pybricks-ble" }
test-log = "0.2"
bitflags = "2.9"
rfd = "0.14"
sha2 = "0.10"
rand = "0.8"
lyon_tessellation = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
