[package]
name = "pybricks-ble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
btleplug = "0.11.4"
futures = "0.3.30"
tokio = "1.35.1"
tracing = "0.1.40"
uuid = "1.6.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test-log = { version = "0.2.14", features = ["log", "trace"] }
