[package]
name = "pybricks-ble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
btleplug = "0.11"
futures = "0.3"
tokio = "1"
tracing = "0.1"
uuid = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test-log = { version = "0.2", features = ["log", "trace"] }
