[package]
name = "test-pybricks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
btleplug = "0.11.4"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
pybricks-ble = { path = "../pybricks-ble" }
tokio-stream = "0.1.14"
uuid = "1.6.1"
tracing = "0.1.40"
